--- a/style2.css
+++ b/style2.css
@@ -41,6 +41,7 @@ img:hover{
     border: 3px solid black;
 
 }
+/* Style for the navigation bar */
 .navbar {
     overflow: hidden;
     background-color: #333;
